--- a/WordZone/App.xaml
+++ b/WordZone/App.xaml
@@ -2,8 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WordZone"
-             StartupUri="Views\MainWindow.xaml">
+             StartupUri="Views\MainWindow.xaml"             
+             xmlns:vm="clr-namespace:WordZone.ViewModels"
+             xmlns:vw="clr-namespace:WordZone.Views">
+    
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type vm:AddPacketPVM}">
+            <vw:AddPacket/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:QuizPVM}">
+            <vw:QuizPage/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
