--- a/WordZone/Views/MainWindow.xaml
+++ b/WordZone/Views/MainWindow.xaml
@@ -7,10 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <StackPanel Visibility="{Binding Menu}">
+        <StackPanel>
             <Button Content="addpacket" Command="{Binding NavigateToAddPacketPageCommand}"></Button>
             <Button Content="QuizPage" Command="{Binding NavigateToQuizPageCommand}"></Button>
         </StackPanel>
-        <Frame Content="{Binding CurrentViewModel}" Margin="10" NavigationUIVisibility="Hidden"/>
+        <Frame Content="{Binding CurrentViewModel}" Margin="0,40,0,0" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
