some code refactorization and cleanup, adjusted DataService function for future needs

--- a/WordZone/Views/AddPacket.xaml
+++ b/WordZone/Views/AddPacket.xaml
@@ -19,8 +19,8 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBox Width="200" Margin="0,5" Text="{Binding EngWord}" />
-                                <TextBox Width="200" Margin="0,5" Text="{Binding PlTranslation}" />
+                                <TextBox Width="200" Margin="0,5" Text="{Binding EnglishWord}" />
+                                <TextBox Width="200" Margin="0,5" Text="{Binding PolishTranslation}" />
                             </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
