--- a/WordZone/Views/AddPacket.xaml
+++ b/WordZone/Views/AddPacket.xaml
@@ -26,7 +26,8 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </StackPanel>
-
+            <Button Content="Dodaj tłumaczenie" Command="{Binding AddRowCommand}" Visibility="{Binding AddDelButtons}"/>
+            <Button Content="Usuń ostatnie tłumaczenie" Command="{Binding DeleteRowCommand}" Visibility="{Binding AddDelButtons}"/>
             <Button Content="Create Table" Width="300" Height="30" Command="{Binding MakePacketCommand}" Margin="0, 0, 0, 20" />
         </StackPanel>
     </Grid>
