--- a/WordZone/App.xaml
+++ b/WordZone/App.xaml
@@ -13,5 +13,8 @@
         <DataTemplate DataType="{x:Type vm:QuizPVM}">
             <vw:QuizPage/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:EditPacketVM}">
+            <vw:EditPacket/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
