--- a/WordZone/Views/AddPacket.xaml
+++ b/WordZone/Views/AddPacket.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AddPacket">
 
-    <Grid>
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <StackPanel>
             <TextBox Text="{Binding TableName}" Width="300" Height="30" Margin="0, 0, 0, 20" />
             <TextBox Text="{Binding NumberOfRows}"/>
@@ -30,5 +30,5 @@
             <Button Content="Usuń ostatnie tłumaczenie" Command="{Binding DeleteRowCommand}" Visibility="{Binding AddDelButtons}"/>
             <Button Content="Create Table" Width="300" Height="30" Command="{Binding MakePacketCommand}" Margin="0, 0, 0, 20" />
         </StackPanel>
-    </Grid>
+    </ScrollViewer>
 </Page>
