--- a/WordZone/Views/AddPacket.xaml
+++ b/WordZone/Views/AddPacket.xaml
@@ -10,25 +10,34 @@
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <StackPanel>
-            <TextBox Text="{Binding TableName}" Width="300" Height="30" Margin="0, 0, 0, 20" />
-            <TextBox Text="{Binding NumberOfRows}"/>
-            <Button Content="Potwierdź" Command="{Binding GenerateRowsCommand}" Width="100"/>
+            <TextBlock Text="Stwórz nowy zbiór!" HorizontalAlignment="Center" FontSize="30" FontWeight="Bold" Margin="0,0,0,10"/>
+            <TextBlock Text="Podaj nazwę nowego zbioru" HorizontalAlignment="Center" FontSize="18" FontWeight="SemiBold"/>
+            <TextBox Text="{Binding TableName}" TextAlignment="Center" Width="300" Height="30" Margin="0, 5, 0,20" />
+            <Button Content="Wprowadź słówka!" Command="{Binding GenerateRowsCommand}" Visibility="{Binding GenerateRowsVis}" Width="150" Height="30"/>
             
-            <StackPanel Name="RecordInputPanel" Margin="10,50,10,10">
+            <StackPanel Margin="0,-10,0,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <TextBlock Text="Słowo po angielsku" FontSize="15" FontWeight="SemiBold" Margin="-70,0,0,0" Visibility="{Binding AddDelButtons}"/>
+                    <TextBlock Text="Polskie tłumaczenie" FontSize="15" FontWeight="SemiBold" Margin="100,0,0,0" Visibility="{Binding AddDelButtons}"/>
+                </StackPanel>
                 <ItemsControl ItemsSource="{Binding TextRows}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBox Width="200" Margin="0,5" Text="{Binding EnglishWord}" />
-                                <TextBox Width="200" Margin="0,5" Text="{Binding PolishTranslation}" />
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <TextBox Width="200" Margin="0,0,10,10" Text="{Binding EnglishWord}" />
+                                <TextBlock Text="—" FontSize="15" FontWeight="Bold" Margin="0,-4,0,0"/>
+                                <TextBox Width="200" Margin="10,0,0,10" Text="{Binding PolishTranslation}" />
                             </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </StackPanel>
-            <Button Content="Dodaj tłumaczenie" Command="{Binding AddRowCommand}" Visibility="{Binding AddDelButtons}"/>
-            <Button Content="Usuń ostatnie tłumaczenie" Command="{Binding DeleteRowCommand}" Visibility="{Binding AddDelButtons}"/>
-            <Button Content="Create Table" Width="300" Height="30" Command="{Binding MakePacketCommand}" Margin="0, 0, 0, 20" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                <Button Content="Usuń ostatnie" Command="{Binding DeleteRowCommand}" Visibility="{Binding AddDelButtons}" Margin="-10,0,0,0" Padding="5"/>
+                <Button Content="Dodaj nowe" Command="{Binding AddRowCommand}" Visibility="{Binding AddDelButtons}" Margin="15,0,0,0" Padding="5"/>
+            </StackPanel>
+            
+            <Button Content="Stwórz zbiór!" Width="300" Height="30" Command="{Binding MakePacketCommand}" Visibility="{Binding AddDelButtons}" />
         </StackPanel>
     </ScrollViewer>
 </Page>
