--- a/WordZone/Views/MainWindow.xaml
+++ b/WordZone/Views/MainWindow.xaml
@@ -5,14 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordZone"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="WordZone" Height="450" Width="800">
     <Grid>
-        <StackPanel>
+        <Grid Height="40" VerticalAlignment="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
             <Button Content="addpacket" Command="{Binding NavigateToAddPacketPageCommand}"></Button>
-            <Button Content="QuizPage" Command="{Binding NavigateToQuizPageCommand}"></Button>
-            <Button Content="EditPage" Command="{Binding NavigateToEditPacketPageCommand}"></Button>
-            <Button Content="FlashCards" Command="{Binding NavigateToFlashCardsCommand}"></Button>
-        </StackPanel>
-        <Frame Content="{Binding CurrentViewModel}" Margin="0,80,0,0" NavigationUIVisibility="Hidden"/>
+            <Button Grid.Column="1" Content="QuizPage" Command="{Binding NavigateToQuizPageCommand}"></Button>
+            <Button Grid.Column="2" Content="EditPage" Command="{Binding NavigateToEditPacketPageCommand}"></Button>
+            <Button Grid.Column="3" Content="FlashCards" Command="{Binding NavigateToFlashCardsCommand}"></Button>
+        </Grid>
+        <Frame Content="{Binding CurrentViewModel}" Margin="0,40,0,0" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
