--- a/WordZone/Views/EditPacket.xaml
+++ b/WordZone/Views/EditPacket.xaml
@@ -11,24 +11,53 @@
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <StackPanel>
+            <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
+                <TextBlock Text="Edytuj swoje zbiory" Style="{StaticResource HeaderTB}"/>
+            </Border>
+
             <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300"/>
-            <Button Content="Load to Dictionary" Width="300" Height="30" Command="{Binding StartEditCommand}" Margin="0, 20, 0, 20" />
-            <StackPanel Name="RecordInputPanel" Margin="10,50,10,10">
-                <Button Content="DropTable" Command="{Binding DeletePacketCommand}" Visibility="{Binding UpdateVis}"/>
-                <ItemsControl ItemsSource="{Binding TextRows}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBox Width="200" Margin="0,5" Text="{Binding EnglishWord}" />
-                                <TextBox Width="200" Margin="0,5" Text="{Binding PolishTranslation}" />
-                                <Button Width="100" Margin="0,5" Content="delete" Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}" CommandParameter="{Binding EnglishWord}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </StackPanel>
-            <Button Content="+" Command="{Binding AddRowCommand}" Visibility="{Binding UpdateVis}"/>
-            <Button Content="Save" Command="{Binding UpdateItemsCommand}" Visibility="{Binding UpdateVis}"/>
+            <Button Content="Edytuj" Width="300" Height="30" Command="{Binding StartEditCommand}" Margin="0, 20, 0, 20" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Border Grid.Column="1" Padding="10" BorderBrush="Black" BorderThickness="1" Visibility="{Binding UpdateVis}">
+                    <StackPanel Name="RecordInputPanel" Margin="0,20,0,0">
+                        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1">
+                            <TextBlock Text="{Binding TableNameEdit}" HorizontalAlignment="Center" FontSize="18" FontWeight="SemiBold"/>
+                        </Border>
+
+                        <Button Content="Usuń zbiór" Command="{Binding DeletePacketCommand}" Margin="0,10,0,20" Width="100" HorizontalAlignment="Right" Background="PaleVioletRed"/>
+                        <ItemsControl ItemsSource="{Binding TextRows}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <!-- Przestrzeń przed EnglishWord -->
+                                            <ColumnDefinition Width="Auto" />
+                                            <!-- Myślnik (TextBlock) -->
+                                            <ColumnDefinition Width="*" />
+                                            <!-- Przestrzeń po PolishTranslation -->
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBox Grid.Column="0" Width="200" HorizontalAlignment="Right" Margin="0,0,10,10" Height="30" Text="{Binding EnglishWord}" />
+                                        <TextBlock Grid.Column="1" Text="—" FontSize="15" FontWeight="Bold" Margin="0,-3,0,0"/>
+                                        <TextBox Grid.Column="2" Width="200" HorizontalAlignment="Left" Margin="10,0,0,10" Text="{Binding PolishTranslation}" />
+                                        <Button Grid.Column="2" Width="100" Margin="220,0,0,10" HorizontalAlignment="Left" Content="usuń tłumaczenie" Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}" CommandParameter="{Binding EnglishWord}"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                        <Button Content="Dodaj nowe słowo" Command="{Binding AddRowCommand}" Margin="0,0,0,10" />
+                        <Button Content="Zapisz zmiany" Command="{Binding UpdateItemsCommand}" HorizontalAlignment="Right"/>
+                    </StackPanel>
+                </Border>
+            </Grid>
+           
+
         </StackPanel>
         
     </ScrollViewer>
