--- a/WordZone/Views/FlashCards.xaml
+++ b/WordZone/Views/FlashCards.xaml
@@ -9,6 +9,10 @@
       Title="FlashCards">
 
     <StackPanel>
+        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
+            <TextBlock Text="Ucz się z fiszkami" Style="{StaticResource HeaderTB}"/>
+        </Border>
+
         <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300"/>
         <Button Content="Load to Dictionary" Width="300" Height="30" Command="{Binding StartLearningCommand}" Margin="0, 20, 0, 20" />
         <Button Content="{Binding FCValue}" Command="{Binding FCChangeCommand}"/>
