--- a/WordZone/Views/QuizMenu.xaml
+++ b/WordZone/Views/QuizMenu.xaml
@@ -9,6 +9,10 @@
       Title="QuizMenu">
 
     <StackPanel>
+        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
+            <TextBlock Text="Spróbuj sił w Quizie" Style="{StaticResource HeaderTB}"/>
+        </Border>
+
         <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300"/>
         <Button Content="Load to Dictionary" Width="300" Height="30" Command="{Binding StartQuizCommand}" Margin="0, 20, 0, 20" />
     </StackPanel>
