--- a/WordZone/Styles/Style.xaml
+++ b/WordZone/Styles/Style.xaml
@@ -1,13 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- Styl dla specyficznych TextBlocków -->
+    <!-- Header TextBlock -->
     <Style x:Key="HeaderTB" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="FontSize" Value="30" />
         <Setter Property="Margin" Value="10,0,0,10" />
     </Style>
-
+    <!--- SemiBolid TextBlock -->
+    <Style x:Key="SemiBoldTB" TargetType="TextBlock">
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Margin" Value="0,0,0,20"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
     <!-- Styl dla przycisków -->
     <Style x:Key="SpecialButtonStyle" TargetType="Button">
         <Setter Property="Background" Value="LightBlue" />
