--- a/WordZone/Views/AddPacket.xaml
+++ b/WordZone/Views/AddPacket.xaml
@@ -8,39 +8,48 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AddPacket">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-        <StackPanel>
-            <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
-                <TextBlock Text="Stwórz nowy zbiór!" Style="{StaticResource HeaderTB}"/>
-            </Border>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-            <TextBlock Text="Podaj nazwę nowego zbioru" Style="{StaticResource SemiBoldTB}"/>
-            <TextBox Text="{Binding TableName}" TextAlignment="Center" Width="300" Height="30" Margin="0, 0, 0,20" />
-            <Button Content="Wprowadź słówka!" Command="{Binding GenerateRowsCommand}" Visibility="{Binding GenerateRowsVis}" Width="150" Height="30"/>
+    <Border Style="{StaticResource HeaderBorder}">
+        <TextBlock Text="Stwórz nowy zbiór!" Style="{StaticResource HeaderTB}"/>
+    </Border>
+        <ScrollViewer Grid.Row="1"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <Border Style="{StaticResource ContentBorder}">
+                <StackPanel>
+                    <TextBlock Text="Podaj nazwę nowego zbioru" Style="{StaticResource SemiBoldTB}"/>
+                    <TextBox Text="{Binding TableName}" TextAlignment="Center" Width="300" Height="30" Margin="0, 0, 0,20" />
+                    <Button Content="Wprowadź słówka!" Command="{Binding GenerateRowsCommand}" Visibility="{Binding GenerateRowsVis}" Width="150" Height="30"/>
+
+                    <StackPanel Margin="0,-10,0,0">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="Słowo po angielsku" FontSize="15" FontWeight="SemiBold" Margin="-70,0,0,0" Visibility="{Binding AddDelButtons}"/>
+                            <TextBlock Text="Polskie tłumaczenie" FontSize="15" FontWeight="SemiBold" Margin="100,0,0,0" Visibility="{Binding AddDelButtons}"/>
+                        </StackPanel>
+                        <ItemsControl ItemsSource="{Binding TextRows}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                        <TextBox Width="200" Margin="0,0,10,10" Text="{Binding EnglishWord}" />
+                                        <TextBlock Text="—" FontSize="15" FontWeight="Bold" Margin="0,-4,0,0"/>
+                                        <TextBox Width="200" Margin="10,0,0,10" Text="{Binding PolishTranslation}" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                        <Button Content="Usuń ostatnie" Command="{Binding DeleteRowCommand}" Visibility="{Binding AddDelButtons}" Margin="-10,0,0,0" Padding="5"/>
+                        <Button Content="Dodaj nowe" Command="{Binding AddRowCommand}" Visibility="{Binding AddDelButtons}" Margin="15,0,0,0" Padding="5"/>
+                    </StackPanel>
+
+                    <Button Content="Stwórz zbiór!" Width="300" Height="30" Command="{Binding MakePacketCommand}" Visibility="{Binding AddDelButtons}" />
+                </StackPanel>  
+            </Border>
             
-            <StackPanel Margin="0,-10,0,0">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBlock Text="Słowo po angielsku" FontSize="15" FontWeight="SemiBold" Margin="-70,0,0,0" Visibility="{Binding AddDelButtons}"/>
-                    <TextBlock Text="Polskie tłumaczenie" FontSize="15" FontWeight="SemiBold" Margin="100,0,0,0" Visibility="{Binding AddDelButtons}"/>
-                </StackPanel>
-                <ItemsControl ItemsSource="{Binding TextRows}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                <TextBox Width="200" Margin="0,0,10,10" Text="{Binding EnglishWord}" />
-                                <TextBlock Text="—" FontSize="15" FontWeight="Bold" Margin="0,-4,0,0"/>
-                                <TextBox Width="200" Margin="10,0,0,10" Text="{Binding PolishTranslation}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                <Button Content="Usuń ostatnie" Command="{Binding DeleteRowCommand}" Visibility="{Binding AddDelButtons}" Margin="-10,0,0,0" Padding="5"/>
-                <Button Content="Dodaj nowe" Command="{Binding AddRowCommand}" Visibility="{Binding AddDelButtons}" Margin="15,0,0,0" Padding="5"/>
-            </StackPanel>
-            
-            <Button Content="Stwórz zbiór!" Width="300" Height="30" Command="{Binding MakePacketCommand}" Visibility="{Binding AddDelButtons}" />
-        </StackPanel>
     </ScrollViewer>
+    </Grid>
 </Page>
