--- a/WordZone/Views/FlashCards.xaml
+++ b/WordZone/Views/FlashCards.xaml
@@ -13,20 +13,23 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
+        <Border Style="{StaticResource HeaderBorder}">
             <TextBlock Text="Ucz się z fiszkami" Style="{StaticResource HeaderTB}"/>
         </Border>
-        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" Padding="20" MaxWidth="700" MinHeight="50" Margin="0,30,0,30">
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+
+            <Border Style="{StaticResource ContentBorder}">
             <StackPanel>
                 <TextBlock Text="Z jakiego zbioru chcesz się uczyć?" Style="{StaticResource SemiBoldTB}"/>
                 <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300"/>
                 <Button Content="Rozpocznij nauke!" Width="300" Height="30" Command="{Binding StartLearningCommand}" Margin="0, 20, 0, 20" />
-                <Button Content="{Binding FCValue}"  Command="{Binding FCChangeCommand}" Height="100" FontSize="60"/>
+                <Button Content="{Binding FCValue}"  Command="{Binding FCChangeCommand}"  Height="100" FontSize="60"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
                     <Button Content="Poprzednie słowo" Command="{Binding PreviousFCCommand}" Visibility="{Binding PrevVis}"  Margin="-10,0,0,0" Padding="5"/>
                     <Button Content="Następne słowo" Command="{Binding NextFCCommand}" Visibility="{Binding NextVis}" Margin="15,0,0,0" Padding="5"/>
                 </StackPanel>
             </StackPanel>
         </Border>
+        </ScrollViewer>
     </Grid>
 </Page>
