--- a/WordZone/Views/MainWindow.xaml
+++ b/WordZone/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordZone"
         mc:Ignorable="d"
-        Title="WordZone" Height="450" Width="800">
+        Title="WordZone" Height="450" Width="800" MinHeight="450" MinWidth="850">
     <Grid>
         <Grid Height="40" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
