--- a/WordZone/Views/QuizMenu.xaml
+++ b/WordZone/Views/QuizMenu.xaml
@@ -8,16 +8,20 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="QuizMenu">
 
-    <StackPanel>
-        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Border Style="{StaticResource HeaderBorder}">
             <TextBlock Text="Spróbuj sił w Quizie" Style="{StaticResource HeaderTB}"/>
         </Border>
-        <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Padding="20" Width="600" Height="170" Margin="0,30,0,0">
+        <Border Style="{StaticResource ContentBorder}" Grid.Row="1">
             <StackPanel>
                 <TextBlock Text="Z jakiego zbioru chcesz quiz?" Style="{StaticResource SemiBoldTB}"/>
                 <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300"/>
                 <Button Content="Startujemy Quiz!!" Width="300" Height="30" Command="{Binding StartQuizCommand}" Margin="0, 20, 0, 20" />
             </StackPanel>
         </Border>
-    </StackPanel>
+    </Grid>
 </Page>
