--- a/WordZone/Views/QuizPage.xaml
+++ b/WordZone/Views/QuizPage.xaml
@@ -10,8 +10,11 @@
       Title="QuizPage">
 
     <Grid>
-        <StackPanel>
-            <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Border Style="{StaticResource HeaderBorder}">
                 <TextBlock Style="{StaticResource HeaderTB}">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="{}Pytanie {0} z {1}">
@@ -21,37 +24,28 @@
                     </TextBlock.Text>
                 </TextBlock>
             </Border>
-
-            <Grid Margin="0,30,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Padding="20" Width="600" MinHeight="170">
+        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="auto">
+            <StackPanel HorizontalAlignment="Center">
+                <Border Style="{StaticResource ContentBorder}" Padding="0">
                     <StackPanel VerticalAlignment="Center">
-                        <TextBlock Text="{Binding KeyVal}" Width="300" Style="{StaticResource SemiBoldTB}"/>
-                        <TextBox Text="{Binding UserVal}" Width="300" TextAlignment="Center" Margin="0,0,0,20"/>
+                        <TextBlock Text="{Binding KeyVal}" Margin="20,20,20,0" Width="300" Style="{StaticResource SemiBoldTB}"/>
+                        <TextBox Text="{Binding UserVal}" Width="300" TextAlignment="Center" Margin="20,20,20,20"/>
+                        <Border BorderBrush="Black" BorderThickness="0,1,0,0" Padding="10">
+                            <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+                            
+                            <Button Grid.Column="0" Content="Zakończ Teraz" Command="{Binding EndQuizCommand}" Visibility="{Binding QEndButVis}" HorizontalAlignment="Left" Padding="20" Background="PaleVioletRed"/>
+                            <Button Grid.Column="2" Content="{Binding QButton}" Command="{Binding NextQuestionCommand}" Background="PaleGreen" HorizontalAlignment="Right" Padding="20"/>
+                        </Grid>
+                        </Border>
                     </StackPanel>
                 </Border>
-                <Border Grid.Column="1" Grid.Row="1" BorderBrush="Black" BorderThickness="1,0,1,1" Padding="10">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Content="Zakończ Teraz" Command="{Binding EndQuizCommand}" Visibility="{Binding QEndButVis}" HorizontalAlignment="Left" Padding="20" Background="PaleVioletRed"/>
-                        <Button Grid.Column="2" Content="{Binding QButton}" Command="{Binding NextQuestionCommand}" Background="PaleGreen" HorizontalAlignment="Right" Padding="20"/>
-                    </Grid>
-                </Border>
-
-            </Grid>
-        </StackPanel>
+            </StackPanel>
+        </ScrollViewer>
 
     </Grid>
 </Page>
