--- a/WordZone/Views/QuizResult.xaml
+++ b/WordZone/Views/QuizResult.xaml
@@ -8,80 +8,83 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="QuizResult">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-        <StackPanel>
-            <StackPanel>
-                <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Margin="0,0,0,10">
-                    <TextBlock Style="{StaticResource HeaderTB}">
-                        <TextBlock.Text>
-                            <MultiBinding StringFormat="{}Twój wynik to: {0}/{1}">
-                                <Binding Path="Points"/>
-                                <Binding Path="NumberOfElements"/>
-                            </MultiBinding>
-                        </TextBlock.Text>
-                    </TextBlock>
-                </Border>
-                <Border BorderBrush="Black" BorderThickness="1,1,1,0" Margin="20,0,20,0">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Margin="10">
-                            <TextBlock Text="Poprawne odpowiedzi" Style="{StaticResource SemiBoldTB}"/>
-                            <ListBox ItemsSource="{Binding DictionaryGood}" BorderBrush="black" HorizontalContentAlignment="Center" MinWidth="300" MinHeight="200" Background="PaleGreen">
-                                <ListBox.ItemContainerStyle>
-                                    <Style TargetType="ListBoxItem">
-                                        <Setter Property="Margin" Value="0,0,0,2"/>
-                                        <Setter Property="BorderBrush" Value="LightGray"/>
-                                        <Setter Property="BorderThickness" Value="0,0,0,1"/>
-                                    </Style>
-                                </ListBox.ItemContainerStyle>
-                                <ListBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding Key}" Padding="10" FontWeight="SemiBold" FontSize="16" Margin="0"/>
-                                            <TextBlock Text="{Binding Value}" Padding="10" FontWeight="SemiBold" FontSize="14" Margin="0"/>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ListBox.ItemTemplate>
-                            </ListBox>
-                        </StackPanel>
-                        <StackPanel Grid.Column="1" Margin="10">
-                            <TextBlock Text="Błędne odpowiedzi" Style="{StaticResource SemiBoldTB}"/>
-                            <ListBox ItemsSource="{Binding DictionaryBad}" BorderBrush="black" HorizontalContentAlignment="Center" MinWidth="300" MinHeight="200" Background="PaleVioletRed">
-                                <ListBox.ItemContainerStyle>
-                                    <Style TargetType="ListBoxItem">
-                                        <Setter Property="Margin" Value="0,0,0,2"/>
-                                        <Setter Property="BorderBrush" Value="LightGray"/>
-                                        <Setter Property="BorderThickness" Value="0,0,0,1"/>
-                                    </Style>
-                                </ListBox.ItemContainerStyle>
-                                <ListBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding Key}" Padding="10" FontWeight="Bold" FontSize="16" Margin="0"/>
-                                            <TextBlock Text="{Binding Value}" Padding="10" FontWeight="SemiBold" FontSize="14" Margin="0"/>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ListBox.ItemTemplate>
-                            </ListBox>
-                        </StackPanel>
-                    </Grid>
-                </Border>
-            </StackPanel>
-            <Grid Height="100" Margin="20,0,20,20">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="2" Content="Spróbuj jeszcze raz!" Command="{Binding ReDoCommand}"/>
-                <Button Grid.Column="0" Content="Wróć do Menu" Command="{Binding BackToMenuCommand}"/>
-                <Button Grid.Column="1" Content="Wybierz inny zbiór" Command="{Binding NewPackCommand}"/>
-            </Grid>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Border Style="{StaticResource HeaderBorder}">
+            <TextBlock Style="{StaticResource HeaderTB}">
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{}Twój wynik to: {0}/{1}">
+                        <Binding Path="Points"/>
+                        <Binding Path="NumberOfElements"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </Border>
+        <Border Style="{StaticResource ContentBorder}" BorderThickness="1,1,1,0" Grid.Row="1" Margin="50,30,50,0">
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="auto">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Margin="10">
+                        <TextBlock Text="Poprawne odpowiedzi" Style="{StaticResource SemiBoldTB}"/>
+                        <ListBox ItemsSource="{Binding DictionaryGood}" BorderBrush="black" HorizontalContentAlignment="Center" MinWidth="300" MinHeight="200" Background="PaleGreen">
+                            <ListBox.ItemContainerStyle>
+                                <Style TargetType="ListBoxItem">
+                                    <Setter Property="Margin" Value="0,0,0,2"/>
+                                    <Setter Property="BorderBrush" Value="LightGray"/>
+                                    <Setter Property="BorderThickness" Value="0,0,0,1"/>
+                                </Style>
+                            </ListBox.ItemContainerStyle>
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel>
+                                        <TextBlock Text="{Binding Key}" Padding="10" FontWeight="SemiBold" FontSize="16" Margin="0"/>
+                                        <TextBlock Text="{Binding Value}" Padding="10" FontWeight="SemiBold" FontSize="14" Margin="0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Margin="10">
+                        <TextBlock Text="Błędne odpowiedzi" Style="{StaticResource SemiBoldTB}"/>
+                        <ListBox ItemsSource="{Binding DictionaryBad}" BorderBrush="black" HorizontalContentAlignment="Center" MinWidth="300" MinHeight="200" Background="PaleVioletRed">
+                            <ListBox.ItemContainerStyle>
+                                <Style TargetType="ListBoxItem">
+                                    <Setter Property="Margin" Value="0,0,0,2"/>
+                                    <Setter Property="BorderBrush" Value="LightGray"/>
+                                    <Setter Property="BorderThickness" Value="0,0,0,1"/>
+                                </Style>
+                            </ListBox.ItemContainerStyle>
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel>
+                                        <TextBlock Text="{Binding Key}" Padding="10" FontWeight="Bold" FontSize="16" Margin="0"/>
+                                        <TextBlock Text="{Binding Value}" Padding="10" FontWeight="SemiBold" FontSize="14" Margin="0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </StackPanel>
+                </Grid>
+            </ScrollViewer>
+        </Border>
+        <Grid Grid.Row="2" Height="100" Margin="50,0,50,20" MaxWidth="1000">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="2" Content="Spróbuj jeszcze raz!" Command="{Binding ReDoCommand}"/>
+            <Button Grid.Column="0" Content="Wróć do Menu" Command="{Binding BackToMenuCommand}"/>
+            <Button Grid.Column="1" Content="Wybierz inny zbiór" Command="{Binding NewPackCommand}"/>
+        </Grid>
 
-        </StackPanel>
-    </ScrollViewer>
+    </Grid>
 
 </Page>
