--- a/WordZone/Styles/Style.xaml
+++ b/WordZone/Styles/Style.xaml
@@ -16,26 +16,67 @@
         <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
     <!-- Styl dla przycisków -->
-    <Style x:Key="SpecialButtonStyle" TargetType="Button">
-        <Setter Property="Background" Value="LightBlue" />
-        <Setter Property="Foreground" Value="White" />
+    <Style x:Key="NaviButton" TargetType="Button">
+        <Setter Property="Background" Value="#A657AE" />
         <Setter Property="FontSize" Value="14" />
-        <Setter Property="Padding" Value="10,5" />
-        <Setter Property="Margin" Value="5" />
-        <Setter Property="BorderBrush" Value="DarkBlue" />
+        <Setter Property="BorderBrush" Value="#8c1a6a" />
         <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#9D75CB" />
+                <Setter Property="FontWeight" Value="Bold" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style TargetType="Button">
+        <Setter Property="Background" Value="#BD83C3" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="BorderBrush" Value="#8c1a6a" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Padding" Value="4"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="4">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="{TemplateBinding Padding}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#C0A6DD" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
     <Style x:Key="ContentBorder" TargetType="Border">
         <Setter Property="Grid.Row" Value="0"/>
-        <Setter Property="BorderBrush" Value="Black"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="#8c1a6a"/>
+        <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Padding" Value="20"/>
         <Setter Property="MaxWidth" Value="1000"/>
         <Setter Property="MinWidth" Value="600"/>
         <Setter Property="Margin" Value="50,30,50,30"/>
+        <Setter Property="Background" Value="Transparent"/>
     </Style>
     <Style x:Key="HeaderBorder" TargetType="Border">
-        <Setter Property="BorderBrush" Value="LightGray"/>
+        <Setter Property="BorderBrush" Value="#A657AE"/>
         <Setter Property="BorderThickness" Value="0,0,0,1"/>
     </Style>
     <Style TargetType="ScrollBar">
@@ -43,10 +84,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ScrollBar">
-                    <Grid Background="LightGray" Width="5">
+                    <Grid Background="#9D75CB" Width="5">
                         <Track Name="PART_Track" IsDirectionReversed="True">
                             <Track.Thumb>
-                                <Thumb Background="Black" BorderThickness="0.5" BorderBrush="Black" Width="5"/>
+                                <Thumb Background="#8c1a6a" BorderThickness="0" Width="5"/>
                             </Track.Thumb>
                         </Track>
                     </Grid>
@@ -54,4 +95,14 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style TargetType="Frame">
+        <Setter Property="Background" Value="#F0E4F2"/>
+    </Style>
+    <Style TargetType="TextBox">
+        <Setter Property="BorderBrush" Value="#8c1a6a"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Padding" Value="2"/>
+    </Style>
+    <!--A657AE , 9D75CB, 9ABCA7, DF2316-->
 </ResourceDictionary>
