--- a/WordZone/Views/FlashCards.xaml
+++ b/WordZone/Views/FlashCards.xaml
@@ -21,8 +21,10 @@
             <Border Style="{StaticResource ContentBorder}">
             <StackPanel>
                 <TextBlock Text="Z jakiego zbioru chcesz się uczyć?" Style="{StaticResource SemiBoldTB}"/>
-                <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300"/>
-                <Button Content="Rozpocznij nauke!" Width="300" Height="30" Command="{Binding StartLearningCommand}" Margin="0, 20, 0, 20" />
+                    <Border HorizontalAlignment="Center" BorderBrush="#8c1a6a" BorderThickness="2">
+                        <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300" BorderThickness="0"/>
+                    </Border>
+                    <Button Content="Rozpocznij nauke!" Width="300" Height="30" Command="{Binding StartLearningCommand}" Margin="0, 20, 0, 20" />
                 <Button Content="{Binding FCValue}"  Command="{Binding FCChangeCommand}"  Height="100" FontSize="60"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
                     <Button Content="Poprzednie słowo" Command="{Binding PreviousFCCommand}" Visibility="{Binding PrevVis}"  Margin="-10,0,0,0" Padding="5"/>
