--- a/WordZone/Views/MainWindow.xaml
+++ b/WordZone/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordZone"
         mc:Ignorable="d"
-        Title="WordZone" Height="450" Width="800" MinHeight="450" MinWidth="850">
+        Title="WordZone" Height="450" Width="852" MinHeight="450" MinWidth="850">
     <Grid>
         <Grid Height="40" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
@@ -14,10 +14,10 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button Content="Dodaj zbiór słów" Command="{Binding NavigateToAddPacketPageCommand}"></Button>
-            <Button Grid.Column="1" Content="Rozwiąż Quiz!" Command="{Binding NavigateToQuizPageCommand}"></Button>
-            <Button Grid.Column="3" Content="Edytuj swoje zbiory" Command="{Binding NavigateToEditPacketPageCommand}"></Button>
-            <Button Grid.Column="2" Content="Ucz się z fiszkami" Command="{Binding NavigateToFlashCardsCommand}"></Button>
+            <Button Content="Dodaj zbiór słów" Style="{StaticResource NaviButton}" Command="{Binding NavigateToAddPacketPageCommand}"></Button>
+            <Button Grid.Column="1" Style="{StaticResource NaviButton}" Content="Rozwiąż Quiz!" Command="{Binding NavigateToQuizPageCommand}"></Button>
+            <Button Grid.Column="3" Style="{StaticResource NaviButton}" Content="Edytuj swoje zbiory" Command="{Binding NavigateToEditPacketPageCommand}"></Button>
+            <Button Grid.Column="2" Style="{StaticResource NaviButton}" Content="Ucz się z fiszkami" Command="{Binding NavigateToFlashCardsCommand}"></Button>
         </Grid>
         <Frame Content="{Binding CurrentViewModel}" Margin="0,40,0,0" NavigationUIVisibility="Hidden"/>
     </Grid>
